<resources>
    <string name="app_name">Forge</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="re_type_email">Re-type Email</string>
    <string name="password">Password</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="date_of_birth_ddmmyyyy">Date of Birth (DDMMYYYY)</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="other">Other</string>
    <string name="create_account">Create Account</string>
    <string name="title_activity_page">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="names">
        <item>- - Choose Trait - -</item>
        <item>Drive</item>
        <item>Honesty</item>
        <item>Communication</item>
        <item>Loyalty</item>
        <item>Empathy</item>
        <item>Reliability</item>
        <item>Open-Mindedness</item>
        <item>Humour</item>
        <item>Independence</item>
        <item>Creativity</item>
    </string-array>

    <string name="action_settings">Settings</string>
    <string name="Strongly_Agree">Strongly Agree</string>
    <string name="Agree">Agree</string>
    <string name="Neutral">Neutral</string>
    <string name="Disagree">Disagree</string>
    <string name="Strongly_Disagree">Strongly Disagree</string>
    <string name="Question1">Q1. You regularly make new friends.</string>
    <string name="Question2">Q2. At social events, you prefer to talk to the people you already know rather than introducing yourself to new people.</string>
    <string name="Question3">Q3. You are comfortable with walking up to a stranger and starting a conversation with them.</string>
    <string name="Question4">Q4. You are interested in discussing various interpretations and analyses of creative works.</string>
    <string name="Question5">Q5. You spend a large portion of free time exploring various random topics that pique your interest.</string>
    <string name="Question6">Q6. You enjoy movies and books that make you come up with your own interpretation of the ending.</string>
    <string name="Question7">Q7. Seeing people cry makes you feel like crying too.</string>
    <string name="Question8">Q8. A small mistake will make you doubt your knowledge and ability in a topic.</string>
    <string name="Question9">Q9. You tend to stay calm when under pressure.</string>
    <string name="Question10">Q10. You often make a backup plan, for a backup plan.</string>
    <string name="Question11">Q11. You prefer doing what you feel at a given moment instead of sticking to a particular routine.</string>
    <string name="Question12">Q12. You like using organizing tools like schedules and lists.</string>

    <string name="MBTI_Explained">
        "One of the creators of the test, Katherine Cook Briggs used philosophical theories to create a test that would categorise people based on the answers to the test.
        The test is based off five aspects to a personality: Mind (how we interact with surroundings), energy(how we see the world and process information), nature(how we make decisions), tactics(how we approach work and decisions) and identity(confidence in abilities and decisions)
        Through a series of 12 questions, we will determine your personality type. Each question will have a statement along with 4 options describing how strongly you agree/disagree with the statement."</string>
    <string name="Email">Email</string>
    <string name="title_activity_scrolling2">ScrollingActivity</string>
    <string name="title_activity_scrolling3">ScrollingActivity</string>
    <string name="title_activity_scrolling4">ScrollingActivity</string>
    <string name="title_activity_scrolling5">ScrollingActivity</string>
    <string name="title_activity_email">Email</string>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_m_b_t_i__test1">ScrollingActivity</string>
    <string name="title_activity_m_b_t_i__test2">ScrollingActivity</string>
</resources>